--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
         <div class="productos-container">
 
             <div class="nuestros-prod">
-                <img src="/Productos/pro-8.jpg" alt="">
+                <img src="Productos/pro-8.jpg" alt="">
                     <a href="/camiseta.html" target="_blank">POLOS</a>    
             </div>
 
             <div class="nuestros-prod">
-                <img src="/Productos/pro-6.jpg" alt="">
+                <img src="Productos/pro-6.jpg" alt="">
                 <a href="#" target="_blank">CAMISAS</a>            
             </div>
 
             <div class="nuestros-prod">
-                <img src="/Productos/pro-3.jpg" alt="">
+                <img src="Productos/pro-3.jpg" alt="">
                 <a href="#">POLERAS</a>            
             </div>
 
             <div class="nuestros-prod">
-                <img src="/Productos/pro-4.jpg" alt="">
+                <img src="Productos/pro-4.jpg" alt="">
                 <a href="#">ABRIGOS Y CASACAS</a>            
             </div>
 
             <div class="nuestros-prod">
-                <img src="/Productos/pro-2.png" alt="">
+                <img src="Productos/pro-2.png" alt="">
                 <a href="#">PANTALONES Y JOGGERS</a>            
             </div>
             <div class="nuestros-prod">
-                <img src="/Productos/pro-7.jpg" alt="">
+                <img src="Productos/pro-7.jpg" alt="">
                 <a href="#">SHORT</a>            
             </div>
 
@@ -102,7 +102,7 @@
         <div class="ingresos-container">
 
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -112,7 +112,7 @@
             </div>
 
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -122,7 +122,7 @@
             </div>
 
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -141,7 +141,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -150,7 +150,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -159,17 +159,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
-                <div class="des">
-                    <span>Element Premium</span>
-                    <h5>Pantalon Skinny</h5>
-                    <h4>$98.00</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -179,7 +169,7 @@
             </div>
 
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -189,7 +179,7 @@
             </div>
 
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -199,7 +189,7 @@
             </div>
 
             <div class="ingresos">
-                <img src="/Ingresos/pro-4.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
@@ -209,7 +199,17 @@
             </div>
 
             <div class="ingresos">
-                <img src="/Ingresos/pro-3.jpg" alt="">
+                <img src="Ingresos/pro-4.jpg" alt="">
+                <div class="des">
+                    <span>Element Premium</span>
+                    <h5>Pantalon Skinny</h5>
+                    <h4>$98.00</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </div>
+
+            <div class="ingresos">
+                <img src="Ingresos/pro-3.jpg" alt="">
                 <div class="des">
                     <span>Element Premium</span>
                     <h5>Pantalon Skinny</h5>
