--- a/index.html
+++ b/index.html
@@ -14,30 +14,29 @@
 <body>
 
     <!--HEADER Y NAV-->
-    <header id="header">
-
+    <header>
         <a href="#" class="logo">
-            <img src="logo1.png" alt="marca de tienda">
+                <img src="logo1.png" alt="marca de tienda">
         </a>
-
-        <div>
-            <ul id="navbar">
+        <div class="navbar">
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="#">Compra</a></li>
                 <li><a href="#">Productos</a></li>
                 <li><a href="#">Nosotros</a></li>
-               <!--  <li>
-                    <a href="#">
-                        <i class="fa-regular fa-user"></i> Iniciar Sesión
-                    </a>
-                </li> -->
+            </ul>
+        </div>
+        <div class="iconos">
+            <ul>
+                <li><a href="#"><i class="fa-regular fa-user"></i></li> 
+                <li><a href="#"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
         </div>
 
-        <div id="mobile">
+        <!-- <div id="mobile">
             <i id="bar" class="fa-solid fa-bars"></i>
-        </div>
+        </div> -->
     </header>
 
     <!--SECTION PRINCIAPAL-->
@@ -92,11 +91,9 @@
     <!--SECTION SECUNDARIO - NUEVOS INGRESOS-->
 
     <section id="secundario" class="section-m1">
-        <h2>¡Nuevos Ingresos!</h2>
-        <p>Los nuevos productos de la temporada</p>
-
-        <div class="filtros">
-
+        <div class="titulo_ingresos">
+            <h2>¡Nuevos Ingresos!</h2>
+            <p>Los nuevos productos de la temporada</p>
         </div>
 
         <div class="ingresos-container">
@@ -158,46 +155,6 @@
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-            <div class="ingresos">
-                <img src="Ingresos/pro-4.jpg" alt="">
-                <div class="des">
-                    <span>Element Premium</span>
-                    <h5>Pantalon Skinny</h5>
-                    <h4>$98.00</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="ingresos">
-                <img src="Ingresos/pro-4.jpg" alt="">
-                <div class="des">
-                    <span>Element Premium</span>
-                    <h5>Pantalon Skinny</h5>
-                    <h4>$98.00</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="ingresos">
-                <img src="Ingresos/pro-4.jpg" alt="">
-                <div class="des">
-                    <span>Element Premium</span>
-                    <h5>Pantalon Skinny</h5>
-                    <h4>$98.00</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="ingresos">
-                <img src="Ingresos/pro-4.jpg" alt="">
-                <div class="des">
-                    <span>Element Premium</span>
-                    <h5>Pantalon Skinny</h5>
-                    <h4>$98.00</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
             <div class="ingresos">
                 <img src="Ingresos/pro-4.jpg" alt="">
                 <div class="des">
