PRINCIPAL-GALERIA DE IMAGENES

--- a/index.html
+++ b/index.html
@@ -33,23 +33,25 @@
                 <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
         </div>
-
-        <!-- <div id="mobile">
-            <i id="bar" class="fa-solid fa-bars"></i>
-        </div> -->
     </header>
 
     <!--SECTION PRINCIAPAL-->
 
-    <section id="principal">
-            <h2>Arevete al</h2>
+    <section class="principal">
+        <img src="i1.jpg" alt="">
+        <img src="i2.jpg" alt="">
+        <img src="i3.jpg" alt="">
+        <img src="i4.jpg" alt="">
+        <img src="i5.jpg" alt="">
+        <img src="i6.jpg" alt="">
+            <!-- <h2>Arevete al</h2>
             <h1>CAMBIO</h1>
-            <button><b>Comprar Ahora</b></button>
+            <button><b>Comprar Ahora</b></button> -->
     </section>
     
     <!--NUEVOS PRODUCTOS-->
 
-    <section id="productos" class="section-np1">
+    <section id="productos">
 
         <h2>CATEGORÍAS</h2>
         <p>Busca tu <strong>producto favorito</strong> según su categoria.</p>
